--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,11 +1,14 @@
-add_executable(test test.cpp)
+add_executable(test_ test.cpp)
 
 # Для души, чтобы можно было писать 'make start_test` и было красиво
-add_custom_target(start_test COMMAND test)
+add_custom_target(start_test COMMAND test_)
 
-target_link_libraries(test PRIVATE arithmetic)
+target_link_libraries(test_ arithmetic GTest::gtest_main)
 
-target_include_directories(test PRIVATE
+target_include_directories(test_ PRIVATE
         "${PROJECT_SOURCE_DIR}/include"
         "${PROJECT_SOURCE_DIR}/test"
 )
+
+include(GoogleTest)
+gtest_discover_tests(test_)
