--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,13 @@ add_subdirectory("fft")
 add_subdirectory("pi")
 add_subdirectory("test")
 
-# enable_testing()
+enable_testing()
 
-# include(FetchContent)
-# FetchContent_Declare(
-#         googletest
-#         URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
-# )
+include(FetchContent)
+FetchContent_Declare(
+        googletest
+        URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
 
-# FetchContent_MakeAvailable(googletest) 
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
