--- a/arithmetic/CMakeLists.txt
+++ b/arithmetic/CMakeLists.txt
@@ -7,3 +7,13 @@ target_include_directories(arithmetic PUBLIC
                           )
 
 target_link_libraries(arithmetic PRIVATE fft)
+
+add_library(arithmetic_32 arithmetic_32.cpp arithmetic_operators_32.cpp)
+
+target_include_directories(arithmetic_32 PUBLIC
+                          "${PROJECT_SOURCE_DIR}/arithmetic"
+                          "${PROJECT_SOURCE_DIR}/fft"
+                          "${PROJECT_SOURCE_DIR}/include"
+                          )
+
+target_link_libraries(arithmetic_32 PRIVATE fft)
