--- a/pi/CMakeLists.txt
+++ b/pi/CMakeLists.txt
@@ -1,10 +1,18 @@
 add_executable(pi main.cpp)
+add_executable(pi_32 main_32.cpp)
 
 # Для души, чтобы можно было писать 'make start_pi` и было красиво
 add_custom_target(start_pi COMMAND pi)
+add_custom_target(start_pi_32 COMMAND pi_32)
 
 target_include_directories(pi PRIVATE
                           "${PROJECT_SOURCE_DIR}/include"
                           )
 
 target_link_libraries(pi PRIVATE arithmetic)
+
+target_include_directories(pi_32 PRIVATE
+                          "${PROJECT_SOURCE_DIR}/include"
+                          )
+
+target_link_libraries(pi_32 PRIVATE arithmetic_32)
