--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 project(LongArithmetic VERSION 1.0)
+cmake_policy(SET CMP0135 NEW) 
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
@@ -13,7 +14,6 @@ add_subdirectory("pi")
 add_subdirectory("test")
 
 enable_testing()
-
 include(FetchContent)
 FetchContent_Declare(
         googletest
